# scc_torres

./: .env.example  .gitignore  Makefile  docker-compose.override.yml  docker-compose.yml  pyproject.toml
backend/: .env.example  .gitignore  docker-compose.override.yml  pyproject.toml
backend/alembic/: env.py
backend/src/: main.py
backend/src/apps/domain/: app.py
backend/src/apps/domain/clientes/: model.py  routes.py  schema.py  service.py
backend/src/apps/domain/terrenos/: model.py  schemas.py
backend/src/apps/identity/auth/: dependencies.py  routes.py  schemas.py  service.py
backend/src/apps/identity/group/: model.py
backend/src/apps/identity/user/: model.py  repository.py  routes.py  schema.py  service.py
backend/src/core/: db.py  ldap_client.py  loader.py  orm.py  repository.py  schema.py  security.py
frontend/: package-lock.json  package.json
frontend/src/lib/components/: app-header.svelte  app-sidebar.svelte  login-form.svelte  nav-main.svelte  nav-user.svelte
frontend/src/lib/server/: auth.ts
frontend/src/routes/home/: +layout.server.ts  +layout.svelte  +page.server.ts  +page.svelte
frontend/src/routes/login/: +page.server.ts  +page.svelte
frontend/src/routes/logout/: +page.server.ts  +server.ts
migrations/versions/: groups_.py  terrenos_.py  users_.py  users_removeemail_addad_.py
scripts/: dev.py
src/: main.py
src/apps/domain/: app.py
src/apps/domain/terrenos/: routes.py
src/apps/identity/: app.py
src/apps/identity/auth/: dependencies.py  routes.py  schemas.py  (+1 more)
src/core/: config.py  ldap_client.py  log.py  security.py
(+12 files in other folders)
